# pki_rust

./: .gitignore  README.md
projet/: chain.crt  (+2 more)
projet/crypt/: Cargo.toml  alice.pfx  csr.csr  database.json  hgouiran@gmail.com.pfx  ocsp.req  private.key  server.crt  user.pfx
projet/crypt/src/: database.rs  db.rs  download.rs  generateCSR.rs  generate_csr.rs  mailing.rs  main.rs  revoke.rs  secour.rs  send_Email.rs  status_certificate.rs
projet/crypt/static/: code.html  code_revoke.html  download.html  envoyer_mail.html  errCert.html  goodCert.html  index.html  mail.html  page.html  revocation.html  revoke.html  verif.html
projet/crypt/usercertificate/: csr.csr  private.key  server.crt
projet/crypt/usercertificate/bender.quent@gmail.com/: csr.csr  private.key  server.crt
projet/crypt/usercertificate/bender.quent@gmail.com/12488/: csr.csr  private.key
projet/crypt/usercertificate/bender.quent@gmail.com/20028/: csr.csr  private.key  server.crt
projet/crypt/usercertificate/cryptoISEN30@gmail.com/12101/: certificate.crt  cryptoISEN30@gmail.com.pfx  csr.csr  private.key
projet/crypt/usercertificate/cryptoISEN30@gmail.com/12965/: certificate.crt  csr.csr  private.key
projet/crypt/usercertificate/cryptoISEN30@gmail.com/18229/: certificate.crt  csr.csr  private.key  root.pfx
projet/crypt/usercertificate/cryptoISEN30@gmail.com/22798/: certificate.crt  csr.csr  private.key
projet/crypt/usercertificate/cryptoISEN30@gmail.com/26649/: certificate.crt  csr.csr  private.key
projet/crypt/usercertificate/cryptoISEN30@gmail.com/29467/: csr.csr  private.key
(+54 files in other folders)
