[package]
name = "crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
serde = { version = "1.0", features = ["derive"] }
actix-files = "0.6.2"
lettre = "0.10.2"
lettre_email = "0.9.4"
rand = "0.8.5"
lazy_static = "1.4.0"
handlebars = "4.3.6"
select = "0.6.0"
serde_json = "1.0"